--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/BadgerETL/angular2_graphql_boilerplate_server#readme",
   "dependencies": {
     "express": "^4.13.3",
-    "express-graphql": "^0.4.5"
+    "express-graphql": "^0.4.5",
+    "graphql": "^0.4.14"
   }
 }
